--- a/SimpleList.API/appsettings.json
+++ b/SimpleList.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=localhost\\sqlexpress; Initial Catalog=SimpleList;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
