Added identity-based security project, with its own database. Added security to list endpoints. Other changes and improvements.

--- a/SimpleList.API/SimpleList.API.csproj
+++ b/SimpleList.API/SimpleList.API.csproj
@@ -16,11 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleList.Application\SimpleList.Application.csproj" />
+    <ProjectReference Include="..\SimpleList.Identity\SimpleList.Identity.csproj" />
     <ProjectReference Include="..\SimpleList.Infraestructure\SimpleList.Infraestructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
