--- a/SimpleList.API/appsettings.json
+++ b/SimpleList.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=localhost\\sqlexpress; Initial Catalog=SimpleList;Integrated Security=True"
+    "ConnectionString": "Data Source=localhost\\sqlexpress; Initial Catalog=SimpleList;Integrated Security=True",
+    "IdentityConnectionString": "Data Source=localhost\\sqlexpress; Initial Catalog=Security;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "1603e93e-ec8c-4279-98c0-dc36d8d9c836",
+    "Issuer": "SimpleList",
+    "Audience": "SimpleList Users",
+    "DurationInMinutes":  360
+  }
 }
